--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.0.0",
-    "svelte": "^3.59.2",
+    "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.0.0"
   }
 }
